Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .vscode
 .DS_Store
+assets/css/footer.css
+assets/css/footer.css.map
+assets/css/home.css
+assets/css/home.css.map
+assets/css/menu.css
+assets/css/menu.css.map
+assets/css/styles.css
+assets/css/styles.css.map
