Heart test and 7-1 system

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
 .vscode
 .DS_Store
-assets/css/footer.css
+assets/css/base.css 
+assets/css/base.css.map
+assets/css/button.css 
+assets/css/button.css.map
+assets/css/heart.css 
+assets/css/heart.css.map
+assets/css/loader.css 
+assets/css/loader.css.map
+assets/css/logo.css 
+assets/css/logo.css.map
+assets/css/footer.css 
 assets/css/footer.css.map
 assets/css/home.css
 assets/css/home.css.map
-assets/css/menu.css
+assets/css/menu.css 
 assets/css/menu.css.map
-assets/css/styles.css
-assets/css/styles.css.map
+assets/css/variables.css
+assets/css/variables.css.map
